ChatBot/erros.txt
teste.cpp: In function ‘int main()’:
teste.cpp:7:1: error: expected ‘}’ at end of input
 }
 ^
